# FSET3

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
include/: analog_sensors.h  battery_mode.h  flame_module.h  gpio.h  gpio_setup.h  gpio_wakeup.h  heartbeat_module.h  json_treatment.h  led_pwm.h  magnetic_module.h  nvs.h  photo_module.h  shock_module.h
main/: CMakeLists.txt  Kconfig.projbuild  analog_sensors.c  battery_mode.c  flame_module.c  gpio.c  gpio_setup.c  gpio_wakeup.c  heartbeat_module.c  json_treatment.c  led_pwm.c  magnetic_module.c  main.c  mqtt.c  nvs.c  photo_module.c  shock_module.c  wifi.c
