idf_component_register(SRCS "nvs.c" "shock_module.c" "flame_module.c" "analog_sensors.c" "gpio_wakeup.c" "battery_mode.c" "gpio.c" "wifi.c" "mqtt.c" "dht11.c" "main.c" "json_treatment.c" "gpio.c" "battery_mode.c" "gpio_wakeup.c" "adc_module.c" "gpio_setup.c" "photo_module.c" "heartbeat_module.c" "analog_sensors.c"
                    INCLUDE_DIRS ".")
